# docker-for-apple-container

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml
docs/: hermes-contract.md  index.html  llms.txt  robots.txt  sitemap.xml
docs/assets/css/: base.css  layout.css  neu.css  styles.css  tokens.css
docs/assets/js/: theme.js
scripts/: stamp_site.py
src/container_docker_shim/: __init__.py  cli.py  compose.py
tests/: test_cli.py  test_compose.py  test_container_presentation.py  test_docs.py  test_hermes_contract.py  test_image.py  test_inspect.py  test_openclaw_contract.py
