[project]
name = "docker-for-apple-container"
version = "0.1.0"
description = "Docker CLI compatibility shim over Apple's container CLI."
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
docker-for-apple-container = "container_docker_shim.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
