[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "docker-for-apple-container"
dynamic = ["version"]
description = "Docker CLI compatibility shim over Apple's container CLI."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AppCubic" }]
keywords = ["docker", "docker-compose", "apple-container", "macos", "containers"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
docker = "container_docker_shim.cli:main"

[project.urls]
Homepage = "https://github.com/appautomaton/docker-for-apple-container"
Repository = "https://github.com/appautomaton/docker-for-apple-container"

# Version is derived from the latest git tag (e.g. v0.1.3) by hatch-vcs.
# There is no version string to bump in any file; tag a release and it flows
# to the wheel, the package metadata, and (via CI) the website.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/container_docker_shim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
